# Btraj

./: CMakeLists.txt  README.md  package.xml
include/: data_type.h  trajectory_generator.h
launch/: hector.launch
scripts/: plot_3d.py
src/: a_star.cpp  b_traj_node.cpp  fmm_planner_node.cpp
